--- a/src/page.css
+++ b/src/page.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap');
+
 .bg {
     opacity: 100%;
     background: rgba(222, 213, 229, 0.73);
@@ -5,10 +8,11 @@
     height: 100%; /* Maintains aspect ratio */
   }
   .stats-lander {
-    opacity: 80%;
+    position: relative;
+    opacity: 100%;
     background: rgba(140, 104, 170, 0.73);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 0px 0px 85px 85px;
+    border-radius: 0px 0px 00px 00px;
     width: 100%; /* Ensures responsiveness */
     height: auto; /* Maintains aspect ratio */
     padding-bottom: 20px;
@@ -16,7 +20,7 @@
   }
   .stats-oval {
     /* Rectangle 15 */
-    opacity: 80%;
+    opacity: 100%;
     width: 80%; /* Ensures responsiveness */
     height: auto; /* Maintains aspect ratio */
     background: #724598;
@@ -25,6 +29,24 @@
     margin: 0 auto;    
     padding-top: 10px;
     padding-bottom: 10px;   
+
+  }
+  .stats-label {
+    font-family: 'Secular One', Georgia, 'Times New Roman', Times, serif;
+    /* font-weight: bold; */
+    font-size: 32px;
+    color: white;
+    opacity: 100%;
+  }
+  .car-label {
+    font-family: 'Kumbh Sans', Georgia, 'Times New Roman', Times, serif;
+    font-weight: bolder;
+    letter-spacing: 1px;
+    font-size: 35px;
+    color: white;
+    opacity: 100%;
+    padding-bottom: 10px;
+    padding-top: 10px;
 
   }
   .car-info {
@@ -140,6 +162,8 @@
     justify-content: space-between;
     position: relative; /* Ensure child elements can be positioned */
     margin: 0 auto;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
   }
   
   /* Circle inside the toggle */
@@ -160,7 +184,8 @@
   
   /* Style for the toggle labels */
   .toggle-label {
-    font-size: 20px;
+    font-family: "Secular One", Georgia, 'Times New Roman', Times, serif;
+    font-size: 23px;
     color: white;
     transition: font-size 0.4s ease, color 0.4s ease; 
     position: absolute;
@@ -179,24 +204,24 @@
   /* Show the appropriate label based on the toggle state */
   .toggle-button input:checked + .slider .toggle-label.on {
     color: white; /* Show 'On' when checked */
-    font-size: 20px;
+    font-size: 23px;
   }
   
   .toggle-button input:checked + .slider .toggle-label.off {
     color: black; /* Show 'On' when checked */
-    font-size: 17px;
+    font-size: 20px;
 
   }
   
    .toggle-button input:not(:checked) + .slider .toggle-label.off {
     color: white;
-    font-size: 20px;
+    font-size: 23px;
 
   }
   
   .toggle-button input:not(:checked) + .slider .toggle-label.on {
     color: black; 
-    font-size: 17px;
+    font-size: 20px;
 
   }
    
