--- a/src/page.css
+++ b/src/page.css
@@ -33,10 +33,24 @@
   }
   .stats-label {
     font-family: 'Secular One', Georgia, 'Times New Roman', Times, serif;
-    /* font-weight: bold; */
     font-size: 32px;
     color: white;
     opacity: 100%;
+  }
+  .hashtag-label {
+    font-family: 'Secular One', Georgia, 'Times New Roman', Times, serif;
+    /* font-weight: bold; */
+    font-size: 20px;
+    color: white;
+    opacity: 100%;
+  }
+  .centered-div {
+    padding-top: 15px;
+    display: flex;
+    justify-content: center; /* Horizontal centering */
+    align-items: center; /* Vertical centering */
+    text-align: center; /* Center text inside the div */
+    margin: 0 auto;
   }
   .car-label {
     font-family: 'Kumbh Sans', Georgia, 'Times New Roman', Times, serif;
@@ -224,4 +238,23 @@
     font-size: 20px;
 
   }
-   
+  #conditional-button {
+    display: block; /* Initially hidden */
+    width: 100px;
+    height: 100px;
+    position: fixed; /* Position relative to the viewport */
+    left: 25px; /* Align to the left */
+    bottom: 25px; /* Align to the bottom */
+    font-size: 23px; /* Button text size */
+    color: #000000; /* Button text color */
+    background: #724598;
+    border: 1px; /* Remove default border */
+    border-radius: 100px; /* Rounded corners */
+    cursor: pointer; /* Pointer cursor on hover */
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transition: background-color 0.3s ease; /* Smooth transition */
+}
+
+#conditional-button:hover {
+  background: grey;
+}
