--- a/src/page.css
+++ b/src/page.css
@@ -17,46 +17,48 @@
     border-radius: 0px 0px 00px 00px;
     width: 100%;
     height: auto;
-    padding-bottom: 20px;
-    visibility: visible;
-}
-  
-.stats-oval {
-    opacity: 1; /* Full visibility */
-    width: 80%;
-    height: auto;
-    background: #724598;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 100px;
-    margin: 0 auto;    
-    padding-top: 10px;
     padding-bottom: 10px;
     visibility: visible;
 }
   
+.stats-oval {
+    display: flex;
+    opacity: 1; /* Full visibility */
+    width: 80%;
+    height: 35px;
+    background: #724598;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 100px;
+    margin: 0 auto;    
+    visibility: visible;
+    align-items: center;  
+    justify-content: center;
+    text-justify: center;
+}
+  
 .stats-label {
     font-family: 'Secular One', Georgia, 'Times New Roman', Times, serif;
-    font-size: 32px;
+    font-size: 21px;
     color: white;
     opacity: 1; /* Full visibility */
     visibility: visible;
+    text-align: center; /* Center the label text */
 }
   
 .hashtag-label {
     font-family: 'Secular One', Georgia, 'Times New Roman', Times, serif;
-    font-size: 20px;
+    font-size: 12px;
     color: white;
     opacity: 1; /* Full visibility */
     visibility: visible;
 }
 
 .centered-div {
-    padding-top: 15px;
+    padding-top: 1px;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin: 0 auto;
     visibility: visible;
 }
 
@@ -64,11 +66,11 @@
     font-family: 'Kumbh Sans', Georgia, 'Times New Roman', Times, serif;
     font-weight: bolder;
     letter-spacing: 1px;
-    font-size: 35px;
+    font-size: 25px;
     color: white;
     opacity: 1; /* Full visibility */
-    padding-bottom: 10px;
-    padding-top: 10px;
+    margin-bottom: 5px;   
+    margin-top: 5px;
     visibility: visible;
 }
 
@@ -214,7 +216,7 @@
   /* Style for the toggle labels */
   .toggle-label {
     font-family: "Secular One", Georgia, 'Times New Roman', Times, serif;
-    font-size: 23px;
+    font-size: 20px;
     color: white;
     transition: font-size 0.4s ease, color 0.4s ease; 
     position: absolute;
@@ -233,24 +235,24 @@
   /* Show the appropriate label based on the toggle state */
   .toggle-button input:checked + .slider .toggle-label.on {
     color: white; /* Show 'On' when checked */
-    font-size: 23px;
+    font-size: 20px;
   }
   
   .toggle-button input:checked + .slider .toggle-label.off {
     color: black; /* Show 'On' when checked */
-    font-size: 20px;
+    font-size: 17px;
 
   }
   
    .toggle-button input:not(:checked) + .slider .toggle-label.off {
     color: white;
-    font-size: 23px;
+    font-size: 20px;
 
   }
   
   .toggle-button input:not(:checked) + .slider .toggle-label.on {
     color: black; 
-    font-size: 20px;
+    font-size: 17px;
 
   }
   #conditional-button {
