--- a/src/page.css
+++ b/src/page.css
@@ -3,6 +3,13 @@
 :root{
 --mainColor: lightcoral; /* Default value */
 }
+.bubbleDiv{
+  width: 100%;
+  height: auto;
+  background-color: var(--mainColor);
+  border-radius: 10px;
+  padding: 10px
+}
 .bg {
     opacity: 1; /* Full visibility */
     background: rgba(222, 213, 229, 0.73);
@@ -327,6 +334,39 @@
     z-index: 10px;
 
 }
+.file-upload {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+}
+
+
+/* Hide the default file input */
+.file-input {
+  display: none;
+}
+
+/* Style the label to look like a button */
+.file-label {
+  padding: 10px 20px;
+  background-color: #007BFF;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 14px;
+  margin: 0 auto;
+}
+
+.file-label:hover {
+  background-color: #0056b3;
+}
+
+/* Style the file name display */
+.file-name {
+  font-size: 14px;
+  color: #555;
+}
 .popup-content {
   width: 400px;
   height: auto; /* Set the width of the popup */
@@ -334,7 +374,9 @@
   background-color: white; /* Background color */
   border-radius: 8px; /* Optional: Rounded corners */
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  justify-content: center;
   display: flex /* Optional: Shadow for depth */
+  
 }
 
 /* Ensure the inputs and button fit well within the popup */
