--- a/src/statsPopup.css
+++ b/src/statsPopup.css
@@ -1,13 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap');
 /* Base styles for the popup */
+.ionButton{
+    width: 80%; 
+    background-color: black;
+}
+
 .stats-dropdowns{
     width: 90%;
     height: 40px;
 }
+
+
 .stats-rows{
     width: 100%;
     justify-content: center;
+    margin: 0 auto ;
+    padding-bottom: 10px;
 }
 .color-button{
     width: 30px;
