--- a/src/page.css
+++ b/src/page.css
@@ -318,21 +318,27 @@
 .vis {
   visibility: visible;
 }
-.settings-drop{
-    position: fixed; /* Position relative to the viewport */
-    margin: 0 auto;
-    justify-self: right;
-    right: 0;
-    top: 25px; /* Align to the left */
-    cursor: pointer; /* Pointer cursor on hover */
-    transition: background-color 0.3s ease; /* Smooth transition */
-}
-.settings-overlay{
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 10px;
 
+.settings-drop {
+  position: fixed; /* Position relative to the viewport */
+  margin: 0; /* No need for auto margins here */
+  right: 0; /* Align to the right of the viewport */
+  top: 25px; /* Position from the top */
+  cursor: pointer; /* Pointer cursor on hover */
+  transition: background-color 0.3s ease; /* Smooth background-color transition */
+}
+
+.settings-overlay {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 10; /* z-index should be an integer without units */
+}
+
+
+.settings-drop:hover {
+  background-color: rgba(0, 0, 0, 0.1); /* Light background on hover */
+  border-radius: 20%; /* Keep the circular shape on hover */
 }
 .file-upload {
   display: flex;
